--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import SkillLayout from '@/components/home/SkillLayout.astro'
 import avatar from '@/assets/avatar.png'
 import config from '@/site-config'
 
-const languages = ['Html', 'JavaScript', 'CSS', 'Shell']
+const languages = ['C', 'C++', 'Python']
 const frontend = ['TypeScript', 'Vite', 'Webpack', 'Astro']
 const backend = ['Vercel', 'Waline']
 
@@ -34,13 +34,13 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
       <div class='flex flex-col items-center gap-y-4'>
         <h1 class='text-3xl font-bold'>{config.author}</h1>
         <div class='flex flex-wrap justify-center gap-x-7 gap-y-3'>
-          <Label title='China'>
+          <Label title='Taiwan / Taipei'>
             <Icon name='location' class='size-5' slot='icon' />
           </Label>
           <Label
-            title='Source code'
+            title='GitHub'
             as='a'
-            href='https://github.com/cworld1/astro-theme-pure'
+            href='https://github.com/Vincentllxz'
             target='_blank'
           >
             <Icon name='github' class='size-5' slot='icon' />
@@ -48,7 +48,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
         </div>
       </div>
 
-      {/* Get template */}
+      <!-- {/* Get template */}
       <a
         href='https://github.com/cworld1/astro-theme-pure'
         target='_blank'
@@ -61,16 +61,23 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           <span class='size-2 rounded-full bg-green-400'></span>
         </span>
         <p class='font-medium text-muted-foreground'>Get Template</p>
-      </a>
+      </a> -->
     </section>
 
     <div id='content' class='animate flex flex-col gap-y-10 md:w-4/5 lg:w-5/6'>
       <Section title='About'>
-        <p class='text-muted-foreground'>Developer / Designer</p>
+        <p class='text-muted-foreground'>CS Student / Developer</p>
         <p class='text-muted-foreground'>
-          Lorem ipsum dolor sit amet, vidit suscipit at mei. Quem denique mea id. Usu ei regione
-          indoctum dissentiunt, cu meliore fuisset mei, vel quod voluptua ne. Ex dicat impedit mel,
-          at eum oratio possit voluptatum.
+        我是 VinSong，本來其實都喜歡叫 Vincent 的，但這名字好像太菜市場了一直被用掉，所以只好自己取一個別的名字。
+        </br>
+        </br>
+          目前就讀於台大資工，平常喜歡嘗試各種新奇的東西，從新技術、新興趨勢到一些很無厘頭的小點子我都愛玩；也喜歡認識不同的人、和朋友天南地北聊八卦，是個再普通不過、卻也充滿熱情與好奇心的大學生。
+        </br>
+        </br>
+          原本喜歡化學，一直夢想當一個化學家，但不知道哪年開始，突然轉換跑道，在電腦科學的道路上一去不複返。
+        </br>
+        </br>
+          我很喜歡紀錄生活，無論是用文字、照片還是影片，只要能留下什麼，我就會想做做看。架設這個網站，其實最初只是心血來潮的想法，但希望未來能一直延續下去，把生活的點點滴滴、一點一滴的成長，都留在這裡，也分享給願意停下來看看的人。
         </p>
         <Button title='More about me' class='w-fit self-end' href='/about' variant='ahead' />
       </Section>
@@ -121,9 +128,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
       <Section title='Education'>
         <Card
           as='a'
-          heading='Lorem ipsum'
-          subheading='Lorem ipsum dolor sit amet, vidit suscipit at mei.'
-          date='August 2021 - July 2025'
+          heading='Nation Taiwan University'
+          subheading='Computer Science & Information Engineering (Bachelor)'
+          date='September 2024 - present'
           href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
         >
           {
@@ -138,7 +145,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
         </Card>
       </Section>
 
-      <Section title='Website List'>
+      <!-- <Section title='Website List'>
         <div class='grid grid-cols-1 gap-3 sm:grid-cols-2'>
           <ProjectCard
             href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
@@ -165,9 +172,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
             imagePath='/src/assets/projects/wen-qiao-g_w8I64FiO0-unsplash.jpg'
           />
         </div>
-      </Section>
+      </Section> -->
 
-      <Section title='Certifications'>
+      <!-- <Section title='Certifications'>
         <Card
           as='a'
           heading='Lorem ipsum'
@@ -175,12 +182,12 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           date='July 2024'
           href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
         />
-      </Section>
+      </Section> -->
 
       <Section title='Skills'>
         <SkillLayout title='Languages' skills={languages} />
-        <SkillLayout title='Frontend' skills={frontend} />
-        <SkillLayout title='Backend' skills={backend} />
+        <!-- <SkillLayout title='Frontend' skills={frontend} />
+        <SkillLayout title='Backend' skills={backend} /> -->
       </Section>
     </div>
     <Quote class='mt-12' />
